--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Christopher Der's Tutorial
+title: The Der's Tutorials
 email: christopher.der.788@my.csun.edu
 description: >- # this means to ignore newlines until "baseurl:"
  Simple, but descriptive tutorials for your selective needs!
